test/tests/compiler/17_supporting_dynamic_memory_allocation/valid/sizeof/plx1_sizeof_binop.plx
pub fn main(none) i32 {
    if sizeof(10 + 10 - 20) == 4 { return 0 }
    return 1
}
