test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/plx1_sizeof_decr_prefix.plx
pub fn main(none) i32 {
    x: i32 = 1
    return --sizeof(x)
}
